# image_map

./: .gitignore  Cargo.toml  LICENSE  package-lock.json  package.json  readme.md  tsconfig.json  webpack.config.cjs
schema/: starfinder_alien_archive_1.json
src/: args.ts  index.html  index.js  index.ts  lib.rs  main.rs  shared.rs
src/mapping/: image_map.ts  json_map.ts
src/schemas/: pdf_schema.json
src/shared/: json_extractor.rs  pdf_extractor.rs
src/system_mapping/sfrpg/: alien_archive1.json  alien_archive2.json  alien_archive3.json  alien_archive_1.json  alien_archive_2.json  alien_archive_3.json
src/workers/: image_map.ts  image_saver.ts  json_extractor.ts  pdf_extractor.ts
