[package]
name = "image_map"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://rustwasm.github.io/docs/wasm-bindgen/reference/arbitrary-data-with-serde.html
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3.64"
temp-file = "0.1.7"
# tempfile = "3.3"
# image = "0.24.0"
pdf = "0.8.1"

serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
# serde_json is just for the example, not required in general
serde_json = "1.0"
